--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ django-filter = "*"
 djoser = "*"
 djangorestframework-simplejwt = "*"
 django-debug-toolbar = "*"
+drf-nested-routers = "*"
 
 [dev-packages]
 
