--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ django-debug-toolbar = "*"
 drf-nested-routers = "*"
 django-cors-headers = "*"
 whitenoise = "*"
+gunicorn = "*"
 
 [dev-packages]
 
